# mutti

./: .gitignore  Cargo.toml  PLAN.txt  README.md
.github/workflows/: build.yml
src/: args.rs  audio_player.rs  db.rs  lib.rs  main.rs  ui.rs  visualizer.rs
tests/: db.rs  visualizer.rs
