[package]
name = "mutti"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["cargo"] }
rodio = { version = "0.22.2", features = ["symphonia-all"] }
crossterm = "0.29.0"
lofty = "0.23.3"
nucleo = "0.5.0"
ratatui = "0.30.0"
ratatui-image = "10.0.6"
rusqlite = "0.39.0"
rustfft = "6.4.1"
tokio = "1.51.0"
walkdir = "2.5.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
