[package]
name = "mutti"
version = "0.3.1"
edition = "2024"

[dependencies]
rustfft = "6.4.1"
clap = { version = "4.6.0", features = ["cargo"] }
rodio = { version = "0.22.2", features = ["symphonia-all"] }
crossterm = "0.29.0"
lofty = "0.23.3"
ratatui = "0.30.0"
ratatui-image = "10.0.6"
rusqlite = { version = "0.39.0", features = ["bundled"] }
image = "0.25"
walkdir = "2.5.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
